# uiuc-shibplugins

./: .gitignore  CMakeLists.txt  README.md
docker/centos7/: Dockerfile  build.sh
docker/ubuntu18.04/: Dockerfile  build.sh
dynamodb-store-tool/: CMakeLists.txt
dynamodb-store-tool/source/: main.cpp
include/uiuc/xmltooling/: DynamoDBStorageService.h
project/: CMakeLists.txt
project/include/uiuc/aws_sdk/core/utils/logging/: XMLToolingLogSystem.h
project/include/uiuc/xmltooling/: DynamoDBStorageService.h
project/source/aws_sdk/core/utils/logging/: XMLToolingLogSystem.cpp
project/source/xmltooling/: DynamoDBStorageService.cpp  main.cpp
project/store-tool/: CMakeLists.txt
project/store-tool/source/: main.cpp
project/tests/: run.py
project/tests/dynadb_store/: __init__.py  test_create.py  test_delete.py  test_deleteContext.py  test_read.py  test_update.py  test_updateContext.py
source/: dynamodb-store.cpp
source/aws_sdk/core/utils/logging/: XMLToolingLogSystem.cpp
source/xmltooling/: DynamoDBStorageService.cpp
